This will add picture of cute kitten

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       <button class="btn btn-primary" id="woof">WOOF!</button>
       <button class="btn btn-inverse" id="meow">Meow.</button>
 
+      <p>Click here for a cute picture.</p>
+    <div class="animal-showing">
+      <img src="img/download.jpeg" alt="picture of a cat." />
+    </div>
+
+
       <div class="row">
         <div class="col-md-6">
           <h2>You said:</h2>
