Add JavaScript functions

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <button class="btn btn-primary" id="woof">WOOF!</button>
       <button class="btn btn-inverse" id="meow">Meow.</button>
 
+
       <p>Click here for a cute picture.</p>
     <div class="animal-showing">
       <img src="img/download.jpeg" alt="picture of a cat." />
@@ -33,6 +34,12 @@
         <div class="col-md-6">
           <h2>The animals said:</h2>
           <ul class="unstyled" id="cat">
+        </div>
+
+
+
+        
+
 
   </body>
 </html>
